added lint config file

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Welcome to JS Learning!</h1>
     <p>This is a Paragrap... add anything you want here!!</p>
+
+    <script src="bundle.js"></script>
 </body>
 </html>
