repait the broke test

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Sudi | Welcome</title>
 </head>
 <body>
-    <h1>Welcome to JS Learning?</h1>
+    <h1>Welcome to JS Learning!</h1>
     <p>This is a Paragrap... add anything you want here!!</p>
 
     <script src="bundle.js"></script>
